# valuand

./: CHANGES.md  CITATION.cff  Cargo.toml  Makefile  README.md  Rakefile
.config/readmer/rust/: README.md.liquid
.github/workflows/: rust.yaml
dart/: Makefile  README.md  pubspec.yaml
dart/example/: valuand_example.dart
dart/lib/: valuand.dart
dart/lib/src/: number.dart
dart/lib/src/number/: float.dart  integer.dart
dart/test/: valuand_test.dart
js/: Makefile  README.md  package.json  tsconfig.json
js/src/: index.ts  number.ts
python/: Makefile  README.md  pyproject.toml
python/src/valuand/: __init__.py
python/src/valuand/number/: __init__.py  complex.py  decimal.py  float.py  integer.py  natural.py  rational.py
ruby/: .gitignore  Makefile  README.md  valuand.gemspec
ruby/lib/: valuand.rb
ruby/lib/valuand/: number.rb  version.rb
ruby/lib/valuand/number/: complex.rb  decimal.rb  float.rb  integer.rb  rational.rb
rust/: Cargo.toml  Makefile  README.md
rust/src/: any_scalar.rs  any_value.rs  bool.rs  char.rs  lib.rs  number.rs  scalar.rs  scalar_type.rs  value.rs  value_type.rs
rust/src/bool/: bson.rs  str.rs
rust/src/char/: borsh.rs  bson.rs  char.rs  u32.rs
rust/src/number/: complex.rs  decimal.rs  decimal_error.rs  f16.rs  f32.rs  f64.rs  float.rs  integer.rs  natural.rs  rational.rs  real.rs
rust/src/number/decimal/: borsh.rs  bson.rs  f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  rust_decimal.rs  str.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
rust/src/number/f32/: borsh.rs  bson.rs  f32.rs  f64.rs  isize.rs  usize.rs
rust/src/number/f64/: borsh.rs  bson.rs  f32.rs  f64.rs  isize.rs  usize.rs
rust/src/number/float/: borsh.rs  f16.rs  f32.rs  f64.rs
rust/src/number/integer/: i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  str.rs
rust/src/number/natural/: str.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
rust/src/number/rational/: i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs
rust/src/number/real/: f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
rust/src/scalar/: bool.rs  f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  unit.rs
rust/src/value/: bool.rs  f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  unit.rs
src/: lib.rs  value.rs
