# See: https://packaging.python.org/en/latest/tutorials/packaging-projects/
# See: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project]
name = "valuand"
description = "Valuand for Python"
readme = "README.md"
authors = [{ name = "Arto Bendiken", email = "arto@bendiken.net" }]
license = "Unlicense"
license-files = ["UNLICENSE"]
version = "0.0.1"

requires-python = ">=3.14"
dependencies = []

keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: Public Domain",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/dryrust/valuand"
Repository = "https://github.com/dryrust/valuand"
Changelog = "https://github.com/dryrust/valuand/blob/master/CHANGES.md"
Releases = "https://github.com/dryrust/valuand/releases"
Issues = "https://github.com/dryrust/valuand/issues"
Documentation = "https://github.com/dryrust/valuand/blob/master/python/README.md"

[tool.uv.build-backend]
module-name = "valuand"
