# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "valuand"
version = "0.0.1"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "The value to be carried."
#documentation = "https://docs.rs/valuand"
readme = true
homepage = "https://github.com/dryrust/valuand"
repository = "https://github.com/dryrust/valuand"
license = "Unlicense"
keywords = ["value", "variant"]
categories = ["rust-patterns", "no-std"]
publish = true

[features]
default = ["all", "std"]
all = ["number"]
alloc = []
std = ["alloc"]
unstable = []

# The "number" feature:
number = ["complex", "real"]
complex = ["dep:num-complex"]
decimal = ["dep:rust_decimal"]
float = ["dep:decorum", "dep:half"]
integer = ["dep:num-bigint", "dep:num-integer"]
rational = ["dep:num-rational"]
real = ["decimal", "float", "integer", "rational"]

# Interoperability:
serde = ["dep:serde", "dep:serde_json"]

[dependencies]

# The "number" feature:
decorum = { version = "0.4", default-features = false, optional = true }
half = { version = "2.7", default-features = false, optional = true }
num-bigint = { version = "0.4", default-features = false, optional = true }
num-complex = { version = "0.4", default-features = false, optional = true }
num-integer = { version = "0.1", default-features = false, optional = true }
num-rational = { version = "0.4", default-features = false, optional = true }
rust_decimal = { version = "1.42", default-features = false, optional = true }

# Interoperability:
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
