# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "valuand"
version = "0.0.4"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "The value to be carried."
#documentation = "https://docs.rs/valuand"
readme = true
homepage = "https://github.com/dryrust/valuand"
repository = "https://github.com/dryrust/valuand"
license = "Unlicense"
keywords = ["value", "variant", "bigint", "bigdecimal"]
categories = ["rust-patterns", "data-structures", "mathematics", "no-std", "wasm"]
publish = true

[features]
default = ["all", "std"]
all = ["number", "math"]
alloc = []
std = ["alloc"]
unstable = []

# The "number" umbrella feature:
number = ["complex", "real"]
complex = ["dep:num-complex"]
decimal = ["dep:rust_decimal"]
float = ["dep:decorum", "dep:half", "dep:num-traits"]
integer = ["dep:num-bigint", "dep:num-integer"]
rational = ["dep:num-rational"]
real = ["decimal", "float", "integer", "rational"]

# The "math" umbrella feature:
math = ["dep:num-traits", "rust_decimal?/maths"]

# Interoperability:
borsh = ["dep:borsh"]
bson = ["dep:bson"]
rust_decimal = ["dep:rust_decimal"]
serde = ["dep:serde", "dep:serde_json", "decorum?/serde", "rust_decimal?/serde-with-str"]

[dependencies]

# The "number" umbrella feature:
decorum = { version = "0.4", default-features = false, optional = true }
half = { version = "2.7", default-features = false, optional = true }
num-bigint = { version = "0.4", default-features = false, optional = true }
num-complex = { version = "0.4", default-features = false, optional = true }
num-integer = { version = "0.1", default-features = false, optional = true }
num-rational = { version = "0.4", default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false, optional = true }
rust_decimal = { version = "1.42", default-features = false, optional = true }

# Interoperability:
borsh = { version = "1.6", default-features = false, features = ["derive"], optional = true }
bson = { version = "3.1", default-features = false, features = ["compat-3-0-0"], optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc", "arbitrary_precision"], optional = true }
